# gws-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/gws_agent/: __init__.py  agent.py  credentials.py  main.py
src/gws_agent/services/: __init__.py  base.py  calendar.py  drive.py  facade.py  gmail.py  tasks.py
