[project]
name = "gws-agent"
version = "1.0.0"
description = "Google Workspace Agent - Gmail, Calendar, Drive, Tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duq-agent-core",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "asyncpg>=0.29.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
gws-agent = "gws_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gws_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv.sources]
duq-agent-core = { git = "https://github.com/duq-ecosystem/duq-agent-core.git", branch = "master" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
